--- a/ui_lovelace_minimalist/dashboard/views/rooms/guest-room.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/guest-room.yaml
@@ -29,3 +29,15 @@ cards:
   - type: "custom:button-card"
     template: card_title
     label: Sensors
+
+  - type: "custom:button-card"
+    template: card_graph
+    entity: sensor.guest_bedroom_16_1min
+    variables:
+      ulm_card_graph_color: "var(--google-yellow)"
+      ulm_card_graph_entity: sensor.guest_bedroom_16_1min
+      ulm_card_graph_type: fill
+      ulm_card_graph_hours: 24
+      ulm_card_graph_group_by: interval
+      ulm_card_graph_line_width: 5
+      ulm_card_graph_name: Electricity 1 min
