--- a/entities/sensors/battery_low_devices.yaml
+++ b/entities/sensors/battery_low_devices.yaml
@@ -10,7 +10,7 @@ sensors:
     unique_id: 1786bfbb-2ed1-4c7e-9dec-ce96b5f8dd2c
     value_template: >-
       {{ states.sensor
-        | selectattr('entity_id','contains', 'battery')
+        | selectattr('attributes.device_class', 'eq', 'battery')
         | rejectattr('state', 'eq', '100')
         | selectattr('state', '<', '20') 
         | map(attribute='entity_id') 
