--- a/entities/binary_sensors/cat_devices_status.yaml
+++ b/entities/binary_sensors/cat_devices_status.yaml
@@ -5,15 +5,23 @@
 
 platform: template
 sensors:
+  cat_noms_status_problem:
+    friendly_name: "Cat Noms Status Problem"
+    entity_id: sensor.cat_noms_status
+    value_template: "{{ not is_state('sensor.cat_noms_status', 'normal') }}"
+    unique_id: 136f0df9-aa84-4978-a293-56af9e85a667
+    device_class: problem
+    icon_template: >
+      mdi:power-plug{{'-off' if not is_state('sensor.cat_noms_status','normal')}}
 
   cat_battery_problem:
     friendly_name: "Cat Battery Problem"
     entity_id: sensor.cat_noms_battery_status
-    value_template: "{{ is_state('sensor.cat_noms_battery_status', 'unavailable') }}"
+    value_template: "{{ states('sensor.cat_noms_battery_status') not in ['normal', 'unavailable'] }}"
     unique_id: d2734d50-f3a4-4aa6-84cc-87e8bb1ab28a
     device_class: problem
     icon_template: >
-          mdi:battery{{'-alert-variant' if is_state('sensor.cat_noms_battery_status','unavailable')}}
+      mdi:battery{{'-alert-variant' if states('sensor.cat_noms_battery_status') not in ['normal', 'unavailable']}}
 
   cat_desicant_problem:
     friendly_name: "Cat Desicant Problem"
