--- a/ui_lovelace_minimalist/dashboard/views/cats.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/cats.yaml
@@ -53,7 +53,7 @@ cards:
       - type: custom:mini-graph-card
         name: Thiccness
         unit: "lb"
-        hours_to_show: 730
+        hours_to_show: 300
         points_per_hour: 0.05
         show_points: false
         icon: mdi:weight-kilogram
@@ -94,29 +94,6 @@ cards:
           ulm_chip_mdi_icon_state_icon: mdi:thermometer
       - type: "custom:button-card"
         template: chip_mdi_icon_state
-        label: "Water"
-        styles:
-          icon:
-            - color: >
-                [[[ if (entity.state == 'on')
-                      return "var(--red-color)" ;
-                    else return "var(--green-color)"; ]]]
-        variables:
-          ulm_chip_mdi_icon_state_entity: binary_sensor.pet_thirst_water_level
-      - type: "custom:button-card"
-        template: chip_mdi_icon_state
-        entity: binary_sensor.cat_battery_problem
-        label: "Battery"
-        styles:
-          icon:
-            - color: >
-                [[[ if (entity.state == 'on') 
-                      return "var(--red-color)" ;
-                    else return "var(--green-color)"; ]]]
-        variables:
-          ulm_chip_mdi_icon_state_entity: binary_sensor.cat_battery_problem
-      - type: "custom:button-card"
-        template: chip_mdi_icon_state
         entity: sensor.cat_noms_desiccant_days_remaining
         styles:
           icon:
@@ -130,7 +107,43 @@ cards:
           ulm_chip_mdi_icon_state_entity: sensor.cat_noms_desiccant_days_remaining
       - type: "custom:button-card"
         template: chip_mdi_icon_state
+        label: ''
+        styles:
+          icon:
+            - color: >
+                [[[ if (entity.state == 'on')
+                      return "var(--red-color)" ;
+                    else return "var(--green-color)"; ]]]
+        variables:
+          ulm_chip_mdi_icon_state_entity: binary_sensor.pet_thirst_water_level
+      - type: "custom:button-card"
+        template: chip_mdi_icon_state
+        entity: binary_sensor.cat_noms_status_problem
+        label: ''
+        styles:
+          icon:
+            - color: >
+                [[[ if (entity.state == 'on') 
+                      return "var(--red-color)" ;
+                    else return "var(--green-color)"; ]]]
+        variables:
+          ulm_chip_mdi_icon_state_entity: binary_sensor.cat_noms_status_problem
+      - type: "custom:button-card"
+        template: chip_mdi_icon_state
+        entity: binary_sensor.cat_battery_problem
+        label: ''
+        styles:
+          icon:
+            - color: >
+                [[[ if (entity.state == 'on') 
+                      return "var(--red-color)" ;
+                    else return "var(--green-color)"; ]]]
+        variables:
+          ulm_chip_mdi_icon_state_entity: binary_sensor.cat_battery_problem
+      - type: "custom:button-card"
+        template: chip_mdi_icon_state
         entity: binary_sensor.cat_noms_food_level
+        label: ''
         styles:
           icon:
             - color: >
