--- a/entities/groups/leak_sensors.yaml
+++ b/entities/groups/leak_sensors.yaml
@@ -8,3 +8,4 @@ leak_sensors:
   entities:
     - binary_sensor.water_heater_leak_sensor
     - binary_sensor.dishwasher_leak_sensor
+    - binary_sensor.ac_pan_leak_sensor
